--- a/html_basic/base_index.html
+++ b/html_basic/base_index.html
@@ -2,9 +2,9 @@
 <html lang="en-US">
     <head>
         <meta charset="utf-8"/>
-        <title>"first code"</title>
+        <title>first code</title>
     </head>
     <body>
-        <p> "This is my <strong> ALX</strong> practice exercise"</p>
+        <p> This is my <strong> ALX</strong> practice exercise</p>
     </body>
 </html>
