--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -156,7 +156,7 @@
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, porro at atque numquam repellat modi pariatur vero delectus corrupti. Temporibus quo debitis consequuntur quod officia sit ad obcaecati repellendus sunt.</p>
                 </div>
                 <div class="item-block">
-                  h3>How does it work?</h3>
+                  <h3>How does it work?</h3>
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, porro at atque numquam repellat modi pariatur vero delectus corrupti. Temporibus quo debitis consequuntur quod officia sit ad obcaecati repellendus sunt.</p>
                 </div>
               </div>
@@ -166,7 +166,7 @@
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, porro at atque numquam repellat modi pariatur vero delectus corrupti. Temporibus quo debitis consequuntur quod officia sit ad obcaecati repellendus sunt.</p>
                 </div>
                 <div class="item-block">
-                  h3>How does it work?</h3>
+                  <h3>How does it work?</h3>
                   <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus, porro at atque numquam repellat modi pariatur vero delectus corrupti. Temporibus quo debitis consequuntur quod officia sit ad obcaecati repellendus sunt.</p>
                 </div>
             </div>
