--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -59,7 +59,7 @@
         </div>
       </section>
       <!-- Services section -->
-      <section id="services" class="section-services" class="section">
+      <section id="services" class="section">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Services</h2>
@@ -102,6 +102,7 @@
             </ul>
           </div>
         </div>
+        <div  class="section-services"></div>
       </section>
       <!-- Works section -->
       <section id="works" class="section-works" data-section-theme="dark">
