--- a/flexbox/3-index.html
+++ b/flexbox/3-index.html
@@ -59,51 +59,50 @@
         </div>
       </section>
       <!-- Services section -->
-<section id="services" class="section section-services">
-    <div class="container">
-      <header class="section-header">
-        <h2 class="section-title">Services</h2>
-        <p class="section-tagline">We work with you</p>
-      </header>
-      <div class="section-body">
-        <ul class="row">
-          <li class="col-1-3">
-            <div class="card-services">
-              <h3 class="card-title"><a href="#">Design & Concept</a></h3>
-            </div>
-          </li>
-          <li class="col-1-3">
-            <div class="card-services">
-              <h3 class="card-title"><a href="#">Digital Strategy</a></h3>
-            </div>
-          </li>
-          <li class="col-1-3">
-            <div class="card-services">
-              <h3 class="card-title"><a href="#">Content Strategy</a></h3>
-            </div>
-          </li>
-          <li class="col-1-3">
-            <div class="card-services">
-              <h3 class="card-title"><a href="#">UX Design</a></h3>
-            </div>
-          </li>
-          <li class="col-1-3">
-            <div class="card-services">
-              <h3 class="card-title"><a href="#">Web Development</a></h3>
-            </div>
-          </li>
-          <li class="col-1-3">
-            <div class="card-services">
-              <h3 class="card-title"><a href="#">Social Media</a></h3>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </section>
-  
+      <section id="services" class="section">
+        <div class="container">
+          <header class="section-header">
+            <h2 class="section-title">Services</h2>
+            <p class="section-tagline">We work with you</p>
+          </header>
+          <div class="section-body">
+            <ul class="row">
+              <li class="col-1-3">
+                <div class="card-services">
+                  <h3 class="card-title"><a href="#">Design & Concept</a></h3>
+                </div>
+              </li>
+              <li class="col-1-3">
+                <div class="card-services">
+                  <h3 class="card-title"><a href="#">Digital Strategy</a></h3>
+                </div>
+              </li>
+              <li class="col-1-3">
+                <div class="card-services">
+                  <h3 class="card-title"><a href="#">Content Strategy</a></h3>
+                </div>
+              </li>
+              <li class="col-1-3">
+                <div class="card-services">
+                  <h3 class="card-title"><a href="#">UX Design</a></h3>
+                </div>
+              </li>
+              <li class="col-1-3">
+                <div class="card-services">
+                  <h3 class="card-title"><a href="#">Web Development</a></h3>
+                </div>
+              </li>
+              <li class="col-1-3">
+                <div class="card-services">
+                  <h3 class="card-title"><a href="#">Social Media</a></h3>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
       <!-- Works section -->
-      <section id="works" class="section section-works" data-section-theme="dark">
+      <section id="works" class="section" data-section-theme="dark">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Works</h2>
@@ -152,7 +151,7 @@
         </div>
       </section>
       <!-- About Us section -->
-      <section id="about" class=" section section-about-us">
+      <section id="about" class="section">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">About Us</h2>
@@ -179,7 +178,7 @@
         </div>
       </section>
       <!-- Latest news section -->
-      <section id="latest_news" class="section section-latest-news">
+      <section id="latest_news" class="section">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Latest News</h2>
@@ -224,7 +223,7 @@
         </div>
       </section>
       <!-- Testimonials section -->
-      <section id="testimonial" class="section section-testimonial">
+      <section id="testimonial" class="section">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Testimonials</h2>
@@ -267,7 +266,7 @@
         </div>
       </section>
       <!-- Contact section -->
-      <section id="contact" class="section section-contact">
+      <section id="contact" class="section">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Contact</h2>
