--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='0-styles.css'>
+    <link rel='stylesheet' href='styles.css'>
   </head>
   <body>
     <!-- Header -->
@@ -153,7 +153,7 @@
         </div>
       </section>
       <!-- About Us section -->
-      <section id="about" class=" section section-about-us">
+      <section id="about" class="section section-about-us">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">About Us</h2>
@@ -272,7 +272,7 @@
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Contact</h2>
-            <p class="section-tagline">We’d love to hear from you!</p>
+            <p class="section-tagline">We'd love to hear from you!</p>
           </header>
           <div class="section-body">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
