--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -268,7 +268,8 @@
         </div>
       </section>
       <!-- Contact section -->
-      <section id="contact" class="section section-contact">
+      <div class="section-contact"></div>
+      <section id="contact" class="section">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Contact</h2>
